--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "node --test"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "next": "15.5.2",
+    "pdf-lib": "^1.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
