prod serve + build scripts

--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
     "build:web:local": "cd dashboard && VITE_API_URL=http://10.0.2.15:3001 npm run build",
     "preview:all": "concurrently -n API,WEB -c green,magenta \"node server.mjs\" \"cd dashboard && vite preview --host 0.0.0.0 --port 5174\"",
     "smoke": "bash scripts/smoke.sh",
-    "test:smoke": "node --test tests/smoke.test.js"
+    "test:smoke": "node --test tests/smoke.test.js",
+    "build:client": "cd dashboard && npm ci && npm run build",
+    "build": "npm run build:client",
+    "start": "node server.mjs"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "marked": "^16.4.1",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^24.29.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
